    + [NT] Lintian now mentions if overrides may have been ignored.
      This happens if a package contains an override for a tag
      that has been marked "non-overridable" by the current vendor
      profile.
    + [NT] Mention ".changes" as a valid file type in the "unknown
      file" error.  Thanks to Michael Gilbert for the report and
      the patch.   (Closes: #639430)

  * lib/Util.pm:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
    + [JW] Stricten the DCtrl parser to choke on some syntax errors
      that was silently ignored.  (Closes: #639516)
  * lib/Lintian/Collect.pm:
    + [JW,NT] Create the source field from the package field if the
      former is not present.  This fixes a number of false-positves
      introduced in 2.5.2.  (Closes: #640186)
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.
    + [NT] Fixed "index" method for source packages.
  * lib/Lintian/Collect/Package.pm:
    + [JW,NT] Replace use of fail with croak.  (Closes: #637741)
  * lib/Lintian/Profile.pm:
    + [NT] Reject profiles containing an unknown field.
  * lib/Lintian/Tag/Info.pm:
    + [JW] Create links for references pointing to files in html
      output.
  * lib/Lintian/Tag/Override.pm:
    + [NT] New file.
  * lib/Lintian/Tags.pm:
    + [NT] Track which tags had overrides that have been dropped.
    + [NT,RG] Collect override comments and print the comments
      above the overridden tag (with --show-overrides).  Thanks
      to Carl Fürstenberg for the report.  (Closes: #474590)
  * lib/Text_utils.pm:
    + [NT] Close <p>-tags in dtml_to_html since the output is used
      in xhtml (xml), where all tags must be closed properly.
      (Closes: #639292)
    + [NT] Remove the last new line (if any) before a </pre> in tag
      to reduce the empty space to the next paragraph.

  * man/lintian.pod.in:
    + [JW] Fixed some stray POD markup.  (Closes: #640705)
